--- a/Practical/Time Table/Time Table.html
+++ b/Practical/Time Table/Time Table.html
@@ -30,9 +30,13 @@
         table tr td{
             padding:5px ;
         }
-        table tr td[colspan = "6"]{
+        table tr td[colspan = "9"]{
             text-align: left;
             border: 0;
+        }
+        table tr.tt td[colspan = "3"]{
+          text-align: left;
+          border: 0;
         }
         table tr td[colspan = "12"],[colspan = "5"]{
             border-bottom: 0;
@@ -70,13 +74,13 @@
       <tr>
           <td colspan="12">FACULTY OF ENGINEERING<br>Department of Computer Engineering</td>
       </tr>
-      <tr>
-          <td colspan="6">Semester:VI</td>
-          <td colspan="6">W.E Date:-17/12/18</td>
+      <tr class="tt">
+          <td colspan="9">Semester:VI</td>
+          <td colspan="3">W.E Date:-17/12/18</td>
       </tr>
-      <tr>
-          <td colspan="6">Class Room: MB204/MB205</td>
-          <td colspan="6">Division:- 6C1</td>
+      <tr class="tt">
+          <td colspan="9">Class Room: MB204/MB205</td>
+          <td colspan="3">Division:- 6C1</td>
       </tr>
       <tr>
           <td colspan="11">Class Coordinator: Prof Heman Mehta(Cabin no.MA256,Ext no.1267)</td>
