--- a/Practical/Time Table/Time Table.html
+++ b/Practical/Time Table/Time Table.html
@@ -36,7 +36,7 @@
 
     <!--- Time Table --->
 
-       <tr>
+       <tr style="background-color: silver">
            <th>Sr.no</th>
            <th>TIME</th>
            <th colspan="3" title="Monday">MON</th>
@@ -65,7 +65,7 @@
            <td colspan="3" title="Web Technology PROF.NIKUNJ VADHER">WT - NV<br>MB204</td>
            <td colspan="3" title="Advance Java PROF.HEMAN MEHTA">AJ - HMM<br>MB205</td>
        </tr>
-       <tr>
+       <tr style="background-color: silver">
            <td></td>
            <td>9:30 - 9:40</td>
            <td colspan="15">TEA BREAK</td>
@@ -91,7 +91,7 @@
            <td colspan="3" title="Advance Java PROF.JAY TERAIYA">AJ-JBT<br>LAB 13</td>
            <td colspan="3" title="Net Technology PROF.HIREN KOTADIYA">DNT - HAK<br>MB205</td>
        </tr>
-        <tr>
+        <tr style="background-color: silver">
            <td></td>
            <td>11:35-11:55</td>
            <td colspan="15">TEA BREAK</td>
@@ -120,7 +120,7 @@
        </tr>
 
     <!-- last Area --->
-       <tr>
+       <tr style="background-color: silver">
            <th colspan="6">SUBJECT NAMES AND CODES</th>
            <th colspan="6">LAB PREMISES</th>
            <th colspan="5">FACULTY INITIALS AND NAMES</th>
