--- a/Practical/Time Table/Time Table.html
+++ b/Practical/Time Table/Time Table.html
@@ -1,243 +1,247 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/icon" href="logo.png">
     <title>Time Table</title>
 
-    
+
 </head>
 
-<body style="margin:0" >
+<body style="margin:0">
 
-   <table border="1" style="text-align:center; table-layout:fixed; width: 100%;
+    <table border="1" style="text-align:center; table-layout:fixed; width: 100%;
    height: 100vh; border-collapse:collapse">
 
-     <!-- heading of Table -->
-      <tr>
-          <td colspan="5" rowspan="5"><img src="marwadi.jpg" width="300px" height="100px"></td>
-      </tr>
-      <tr>
-          <td colspan="12"  style="border-bottom:0;border-top:0">FACULTY OF ENGINEERING<br>Department of Computer Engineering</td>
-      </tr>
-      <tr class="tt">
-          <td colspan="9" style="text-align:left; border-top:0;border-bottom: 0;border-right:0">Semester:VI</td>
-          <td colspan="3" style="text-align:left;border-top:0;border-bottom: 0;border-left:0">W.E Date:-17/12/18</td>
-      </tr>
-      <tr class="tt">
-          <td colspan="9" style="text-align:left;border-top:0;border-bottom:0;border-right:0">Class Room: MB204/MB205</td>
-          <td colspan="3" style="text-align:left; border-top:0;border-bottom: 0;border-left:0 ">Division:- 6C1</td>
-      </tr>
-      <tr>
-          <td colspan="12" style="text-align:left;border-top:0;border-bottom: 0">Class Coordinator: Prof Heman Mehta(Cabin no.MA256,Ext no.1267)</td>
-      </tr>
+        <!-- heading of Table -->
+        <tr>
+            <td colspan="5" rowspan="5"><img src="marwadi.jpg" width="300px" height="100px"></td>
+        </tr>
+        <tr>
+            <td colspan="12" style="border-bottom:0;border-top:0">FACULTY OF ENGINEERING<br>Department of Computer
+                Engineering</td>
+        </tr>
+        <tr class="tt">
+            <td colspan="9" style="text-align:left; border-top:0;border-bottom: 0;border-right:0">Semester:VI</td>
+            <td colspan="3" style="text-align:left;border-top:0;border-bottom: 0;border-left:0">W.E Date:-17/12/18</td>
+        </tr>
+        <tr class="tt">
+            <td colspan="9" style="text-align:left;border-top:0;border-bottom:0;border-right:0">Class Room: MB204/MB205</td>
+            <td colspan="3" style="text-align:left; border-top:0;border-bottom: 0;border-left:0 ">Division:- 6C1</td>
+        </tr>
+        <tr>
+            <td colspan="12" style="text-align:left;border-top:0;border-bottom: 0">Class Coordinator: Prof Heman
+                Mehta(Cabin no.MA256,Ext no.1267)</td>
+        </tr>
 
 
-    <!--- Time Table --->
+        <!--- Time Table --->
 
-       <tr style="background-color: silver">
-           <th>Sr.no</th>
-           <th>TIME</th>
-           <th colspan="3" title="Monday">MON</th>
-           <th colspan="3" title="Tuesday">TUE</th>
-           <th colspan="3" title="Wednesday">WED</th>
-           <th colspan="3" title="Thursday">THU</th>
-           <th colspan="3" title="Friday">FRI</th>
-       </tr>
-       <tr>
-           <td>1</td>
-           <td>7:30 - 8:30</td>
-           <td colspan="3" title="Design Engineering IIB PROF.KRISHNA SUCHAK">DE IIB - KS<br>MB202</td>
-           <td rowspan="2" title="Advance Java PROF.HEMAN MEHTA">A<br><br>AJ<br>HMM<br><br>LAB 13</td>
-           <td rowspan="2" title="Web Technology PROF.NIKUNJ VADHER">B<br><br>WT<br>NV<br><br>LAB 12</td>
-           <td rowspan="2" title="Web Technology PROF.MUNINDRA LUNAGARIA">C<br><br>WT<br>MHL<br><br>LAB 16</td>
-           <td colspan="3" title="Advance Java PROF.HEMAN MEHTA">AJ - HMM<br>MB205</td>
-           <td colspan="3" title="Theory of Computation PROF.REKHA REGAR">TOC - RR<br>MB204</td>
-           <td colspan="3" title="Theory of Computation PROF.REKHA REGAR">TOC - RR<br>MB205</td>
-
-       </tr>
-       <tr>
-           <td>2</td>
-           <td>8:30 - 9:30</td>
-           <td colspan="3" title="Web Technology PROF.NIKUNJ VADHER">WT - NV<br>MB205</td>
-           <td colspan="3" title="Theory of Computation PROF.REKHA REGAR">TOC - RR<br>MB205</td>
-           <td colspan="3" title="Web Technology PROF.NIKUNJ VADHER">WT - NV<br>MB204</td>
-           <td colspan="3" title="Advance Java PROF.HEMAN MEHTA">AJ - HMM<br>MB205</td>
-       </tr>
-       <tr style="background-color: silver">
-           <td></td>
-           <td>9:30 - 9:40</td>
-           <td colspan="15">TEA BREAK</td>
-       </tr>
-       <tr>
-           <td>3</td>
-           <td>9:40 - 10:40</td>
-           <td rowspan="2" title="Software Engineering PROF.MADHU S SHUKLA">A<br><br>SE<br>MSS<br><br>LAB 16</td>
-           <td rowspan="2" title="Net Technology PROF.HIREN KOTADIYA">B<br><br>DNT<br>HAK<br><br>LAB 12</td>
-           <td rowspan="2" title="Advance Java PROF.HEMAN MEHTA">C<br><br>AJ<br>HMM<br><br>LAB 13</td>
-           <td colspan="3" title="Advance Java PROF.JAY TERAIYA">AJ-JBT<br>LAB 13</td>
-           <td rowspan="2" title="Web Technology PROF.NIKUNJ VADHER">A<br><br>WT<br>NV<br><br>LAB 11</td>
-           <td rowspan="2" title="Software Engineering PROF.MADHU S SHUKLA">B<br><br>SE<br>MSS<br><br>LAB 16</td>
-           <td rowspan="2" title="Net Technology PROF.HIREN KOTADIYA">C<br><br>DNT<br>HAK<br><br>LAB 12</td>
-           <td rowspan="2" title="Net Technology PROF.HIREN KOTADIYA">A<br><br>DNT<br>HAK<br><br>LAB 3</td>
-           <td rowspan="2" title="Advance Java PROF.HEMAN MEHTA">B<br><br>AJ<br>HMM<br><br>LAB 12</td>
-           <td rowspan="2" title="Software Engineering PROF.MADHU S SHUKLA">C<br><br>SE<br>MSS<br><br>LAB 16</td>
-           <td colspan="3" title="Web Technology PROF.NIKUNJ VADHER">WT - NV<br>MB205</td>
-       </tr>
-       <tr>
-           <td>4</td>
-           <td>10:40-11:35</td>
-           <td colspan="3" title="Advance Java PROF.JAY TERAIYA">AJ-JBT<br>LAB 13</td>
-           <td colspan="3" title="Net Technology PROF.HIREN KOTADIYA">DNT - HAK<br>MB205</td>
-       </tr>
         <tr style="background-color: silver">
-           <td></td>
-           <td>11:35-11:55</td>
-           <td colspan="15">TEA BREAK</td>
-       </tr>
-       <tr>
-           <td>5</td>
-           <td>11:55-12:55</td>
-           <td colspan="3" title="Web Technology PROF.NIKUNJ VADHER">WT - NV<br>MB205</td>
-           <td colspan="3" title="Net Technology PROF.HIREN KOTADIYA">DNT - HAK <br> MB205</td>
-           <td colspan="3" title="Software Engineering PROF.MADHU S SHUKLA">SE - MSS<br>MB205</td>
-           <td colspan="3" title="Software Engineering PROF.MADHU S SHUKLA">SE - MSS<br>MB205</td>
-           <td colspan="3" title="Net Technology PROF.HIREN KOTADIYA">DNT - HAK<br>MB205</td>
+            <th>Sr.no</th>
+            <th>TIME</th>
+            <th colspan="3" title="Monday">MON</th>
+            <th colspan="3" title="Tuesday">TUE</th>
+            <th colspan="3" title="Wednesday">WED</th>
+            <th colspan="3" title="Thursday">THU</th>
+            <th colspan="3" title="Friday">FRI</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>7:30 - 8:30</td>
+            <td colspan="3" title="Design Engineering IIB PROF.KRISHNA SUCHAK">DE IIB - KS<br>MB202</td>
+            <td rowspan="2" title="Advance Java PROF.HEMAN MEHTA">A<br><br>AJ<br>HMM<br><br>LAB 13</td>
+            <td rowspan="2" title="Web Technology PROF.NIKUNJ VADHER">B<br><br>WT<br>NV<br><br>LAB 12</td>
+            <td rowspan="2" title="Web Technology PROF.MUNINDRA LUNAGARIA">C<br><br>WT<br>MHL<br><br>LAB 16</td>
+            <td colspan="3" title="Advance Java PROF.HEMAN MEHTA">AJ - HMM<br>MB205</td>
+            <td colspan="3" title="Theory of Computation PROF.REKHA REGAR">TOC - RR<br>MB204</td>
+            <td colspan="3" title="Theory of Computation PROF.REKHA REGAR">TOC - RR<br>MB205</td>
 
-       </tr>
-       <tr>
-           <td>6</td>
-           <td>12:55 - 1:50</td>
-           <td colspan="3" title="Theory of Computation PROF.REKHA REGAR">TOC - RR<br>MB205</td>
-           <td colspan="3" title="Software Engineering PROF.MADHU S SHUKLA">SE - MSS<br>MB205</td>
-           <td colspan="3" title="Net Technology PROF.HIREN KOTADIYA">DNT - HAK<br>MB205</td>
-           <td colspan="3" title="Advance Java PROF.HEMAN MEHTA">AJ - HMM<br>MB205</td>
-           <td colspan="3" title="Software Engineering PROF.MADHU S SHUKLA">SE - MSS<br>MB205</td>
-       </tr>
-       <tr>
-           <td colspan="17"></td>
-       </tr>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>8:30 - 9:30</td>
+            <td colspan="3" title="Web Technology PROF.NIKUNJ VADHER">WT - NV<br>MB205</td>
+            <td colspan="3" title="Theory of Computation PROF.REKHA REGAR">TOC - RR<br>MB205</td>
+            <td colspan="3" title="Web Technology PROF.NIKUNJ VADHER">WT - NV<br>MB204</td>
+            <td colspan="3" title="Advance Java PROF.HEMAN MEHTA">AJ - HMM<br>MB205</td>
+        </tr>
+        <tr style="background-color: silver">
+            <td></td>
+            <td>9:30 - 9:40</td>
+            <td colspan="15">TEA BREAK</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>9:40 - 10:40</td>
+            <td rowspan="2" title="Software Engineering PROF.MADHU S SHUKLA">A<br><br>SE<br>MSS<br><br>LAB 16</td>
+            <td rowspan="2" title="Net Technology PROF.HIREN KOTADIYA">B<br><br>DNT<br>HAK<br><br>LAB 12</td>
+            <td rowspan="2" title="Advance Java PROF.HEMAN MEHTA">C<br><br>AJ<br>HMM<br><br>LAB 13</td>
+            <td colspan="3" title="Advance Java PROF.JAY TERAIYA">AJ-JBT<br>LAB 13</td>
+            <td rowspan="2" title="Web Technology PROF.NIKUNJ VADHER">A<br><br>WT<br>NV<br><br>LAB 11</td>
+            <td rowspan="2" title="Software Engineering PROF.MADHU S SHUKLA">B<br><br>SE<br>MSS<br><br>LAB 16</td>
+            <td rowspan="2" title="Net Technology PROF.HIREN KOTADIYA">C<br><br>DNT<br>HAK<br><br>LAB 12</td>
+            <td rowspan="2" title="Net Technology PROF.HIREN KOTADIYA">A<br><br>DNT<br>HAK<br><br>LAB 3</td>
+            <td rowspan="2" title="Advance Java PROF.HEMAN MEHTA">B<br><br>AJ<br>HMM<br><br>LAB 12</td>
+            <td rowspan="2" title="Software Engineering PROF.MADHU S SHUKLA">C<br><br>SE<br>MSS<br><br>LAB 16</td>
+            <td colspan="3" title="Web Technology PROF.NIKUNJ VADHER">WT - NV<br>MB205</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>10:40-11:35</td>
+            <td colspan="3" title="Advance Java PROF.JAY TERAIYA">AJ-JBT<br>LAB 13</td>
+            <td colspan="3" title="Net Technology PROF.HIREN KOTADIYA">DNT - HAK<br>MB205</td>
+        </tr>
+        <tr style="background-color: silver">
+            <td></td>
+            <td>11:35-11:55</td>
+            <td colspan="15">TEA BREAK</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>11:55-12:55</td>
+            <td colspan="3" title="Web Technology PROF.NIKUNJ VADHER">WT - NV<br>MB205</td>
+            <td colspan="3" title="Net Technology PROF.HIREN KOTADIYA">DNT - HAK <br> MB205</td>
+            <td colspan="3" title="Software Engineering PROF.MADHU S SHUKLA">SE - MSS<br>MB205</td>
+            <td colspan="3" title="Software Engineering PROF.MADHU S SHUKLA">SE - MSS<br>MB205</td>
+            <td colspan="3" title="Net Technology PROF.HIREN KOTADIYA">DNT - HAK<br>MB205</td>
 
-    <!-- last Area --->
-       <tr style="background-color: silver">
-           <th colspan="6">SUBJECT NAMES AND CODES</th>
-           <th colspan="6">LAB PREMISES</th>
-           <th colspan="5">FACULTY INITIALS AND NAMES</th>
-       </tr>
-       <tr>
-           <td>SE</td>
-           <td>2160705</td>
-           <td colspan="4">Software Engineering</td>
-           <td>SE</td>
-           <td colspan="2">LAB NO.16</td>
-           <td></td>
-           <td colspan="2"></td>
-           <td>JBT</td>
-           <td colspan="3">PROF.JAY H TERAIYA</td>
-           <td></td>
-       </tr>
-       <tr>
-           <td>AJ</td>
-           <td>2160707</td>
-           <td colspan="4">Advanced Java</td>
-           <td>AJ</td>
-           <td colspan="2">LAB NO.3,13</td>
-           <td></td>
-           <td colspan="2"></td>
-           <td>HMM</td>
-           <td colspan="3">PROF.HEMAN MEHTA</td>
-           <td></td>
-       </tr>
-       <tr>
-           <td>TOC</td>
-           <td>2160704</td>
-           <td colspan="4">Theory of Computation</td>
-           <td>WT</td>
-           <td colspan="2">LAB NO.11,12,16</td>
-           <td></td>
-           <td colspan="2"></td>
-           <td>MSS</td>
-           <td colspan="3">PROF.MADHU S SHUKLA</td>
-           <td></td>
-       </tr>
-       <tr>
-           <td>WT</td>
-           <td>2160708</td>
-           <td colspan="4">Web Technology</td>
-           <td>DNT</td>
-           <td colspan="2">LAB NO.12</td>
-           <td></td>
-           <td colspan="2"></td>
-           <td>AGR</td>
-           <td colspan="3">PROF.ASHISH REVAR</td>
-           <td></td>
-       </tr>
-       <tr>
-           <td>DNET</td>
-           <td>2160711</td>
-           <td colspan="4">Net Technology</td>
-           <td></td>
-           <td colspan="2"></td>
-           <td></td>
-           <td colspan="2"></td>
-           <td>HAK</td>
-           <td colspan="3">PROF.HIREN KOTADIYA</td>
-           <td></td>
-       </tr>
-       <tr>
-           <td>DE-II B</td>
-           <td>2160001</td>
-           <td colspan="4">Design Engineering IIB</td>
-           <td></td>
-           <td colspan="2"></td>
-           <td></td>
-           <td colspan="2"></td>
-           <td>NV</td>
-           <td colspan="3">PROF.NIKUNJ VADHER</td>
-           <td></td>
-       </tr>
-       <tr>
-           <td></td>
-           <td></td>
-           <td colspan="4"></td>
-           <td></td>
-           <td colspan="2"></td>
-           <td></td>
-           <td colspan="2"></td>
-           <td>KS</td>
-           <td colspan="3">PROF.KRISHNA SUCHAK</td>
-           <td></td>
-       </tr>
-       <tr>
-           <td></td>
-           <td></td>
-           <td colspan="4"></td>
-           <td></td>
-           <td colspan="2"></td>
-           <td></td>
-           <td colspan="2"></td>
-           <td>RR</td>
-           <td colspan="3">PROF.REKHA REGAR</td>
-           <td></td>
-       </tr>
-       <tr>
-           <td></td>
-           <td></td>
-           <td colspan="4"></td>
-           <td></td>
-           <td colspan="2"></td>
-           <td></td>
-           <td colspan="2"></td>
-           <td>NPJ</td>
-           <td colspan="3">PROF.NILESH JADHAV</td>
-           <td></td>
-       </tr>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>12:55 - 1:50</td>
+            <td colspan="3" title="Theory of Computation PROF.REKHA REGAR">TOC - RR<br>MB205</td>
+            <td colspan="3" title="Software Engineering PROF.MADHU S SHUKLA">SE - MSS<br>MB205</td>
+            <td colspan="3" title="Net Technology PROF.HIREN KOTADIYA">DNT - HAK<br>MB205</td>
+            <td colspan="3" title="Advance Java PROF.HEMAN MEHTA">AJ - HMM<br>MB205</td>
+            <td colspan="3" title="Software Engineering PROF.MADHU S SHUKLA">SE - MSS<br>MB205</td>
+        </tr>
+        <tr>
+            <td colspan="17"></td>
+        </tr>
 
-       </table>
+        <!-- last Area --->
+        <tr style="background-color: silver">
+            <th colspan="6">SUBJECT NAMES AND CODES</th>
+            <th colspan="6">LAB PREMISES</th>
+            <th colspan="5">FACULTY INITIALS AND NAMES</th>
+        </tr>
+        <tr>
+            <td>SE</td>
+            <td>2160705</td>
+            <td colspan="4">Software Engineering</td>
+            <td>SE</td>
+            <td colspan="2">LAB NO.16</td>
+            <td></td>
+            <td colspan="2"></td>
+            <td>JBT</td>
+            <td colspan="3">PROF.JAY H TERAIYA</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>AJ</td>
+            <td>2160707</td>
+            <td colspan="4">Advanced Java</td>
+            <td>AJ</td>
+            <td colspan="2">LAB NO.3,13</td>
+            <td></td>
+            <td colspan="2"></td>
+            <td>HMM</td>
+            <td colspan="3">PROF.HEMAN MEHTA</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>TOC</td>
+            <td>2160704</td>
+            <td colspan="4">Theory of Computation</td>
+            <td>WT</td>
+            <td colspan="2">LAB NO.11,12,16</td>
+            <td></td>
+            <td colspan="2"></td>
+            <td>MSS</td>
+            <td colspan="3">PROF.MADHU S SHUKLA</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>WT</td>
+            <td>2160708</td>
+            <td colspan="4">Web Technology</td>
+            <td>DNT</td>
+            <td colspan="2">LAB NO.12</td>
+            <td></td>
+            <td colspan="2"></td>
+            <td>AGR</td>
+            <td colspan="3">PROF.ASHISH REVAR</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>DNET</td>
+            <td>2160711</td>
+            <td colspan="4">Net Technology</td>
+            <td></td>
+            <td colspan="2"></td>
+            <td></td>
+            <td colspan="2"></td>
+            <td>HAK</td>
+            <td colspan="3">PROF.HIREN KOTADIYA</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>DE-II B</td>
+            <td>2160001</td>
+            <td colspan="4">Design Engineering IIB</td>
+            <td></td>
+            <td colspan="2"></td>
+            <td></td>
+            <td colspan="2"></td>
+            <td>NV</td>
+            <td colspan="3">PROF.NIKUNJ VADHER</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td colspan="4"></td>
+            <td></td>
+            <td colspan="2"></td>
+            <td></td>
+            <td colspan="2"></td>
+            <td>KS</td>
+            <td colspan="3">PROF.KRISHNA SUCHAK</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td colspan="4"></td>
+            <td></td>
+            <td colspan="2"></td>
+            <td></td>
+            <td colspan="2"></td>
+            <td>RR</td>
+            <td colspan="3">PROF.REKHA REGAR</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td colspan="4"></td>
+            <td></td>
+            <td colspan="2"></td>
+            <td></td>
+            <td colspan="2"></td>
+            <td>NPJ</td>
+            <td colspan="3">PROF.NILESH JADHAV</td>
+            <td></td>
+        </tr>
+
+    </table>
 
 
 
 
 </body>
+
 </html>
