--- a/Practical/CVs/CVs.html
+++ b/Practical/CVs/CVs.html
@@ -1,140 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <title>CVs</title>
-    <style media="screen">
-      *{
-        padding: 0;
-        margin: 0;
-      }
-      body{
-        background-color: rgb(166, 188, 251);
-      }
-      .re{
-        position: relative;
-        left: 50%;
-        margin: 50px 0;
-        background-color: white;
-        width:50em;
-        height:65em;
-        box-shadow: 0px 2px 20px 2px rgb(97, 99, 129);
-        transform: translate(-50%);
-      }
-      table{
-        position: absolute;
-        table-layout: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-      }
-      table tr td{
-        padding: 5px;
-      }
-    </style>
+  <title>CVs</title>
+  <style media="screen">
+    * {
+      padding: 0;
+      margin: 0;
+    }
+
+    body {
+      background-color: rgb(166, 188, 251);
+    }
+
+    table {
+      position: absolute;
+      margin: 3em 0;
+      padding: 50px;
+      table-layout: fixed;
+      background-color: white;
+      width: auto;
+      height: 100%;
+      left: 50%;
+      box-shadow: 0px 2px 20px 2px rgb(97, 99, 129);
+      transform: translatex(-50%);
+    }
+
+    table tr td {
+      padding: 5px;
+    }
+  </style>
 </head>
+
 <body>
-    <div class="re">
-
     <table border="0">
-        <tr>
-          <td style=" font-size: 36px;"> <b>Ridham Sherathiya</b> </td>
-          <td  style=" font-size: 14px;color:#666666;padding-left:30px">123 Your Street <br>
-            Your City, ST 12345 <br>
-            (123) 456-7890 <br>
-            no_reply@example.com <br></td>
-        </tr>
-        <tr>
-          <td  style=" font-size: 14px;color:#666666; padding-bottom: 30px;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</td>
-        </tr>
-        <tr>
-          <td  style=" font-size: 16px; color:blue;">EXPERIENCE</td>
-          <td style=" font-size: 16px; color:blue;padding-left:30px">SKILLS</td>
-        </tr>
-        <tr>
-          <td style=" font-size: 16px;"><b>Company</b>, Location — <i>Job Title</i></td>
-          <td rowspan="3" style=" font-size: 14px;color:#666666;padding-left:30px">Lorem ipsum dolor sit amet.<br>
-              Consectetuer adipiscing elit.<br><br>
-                Sed diam nonummy nibh euismod tincidunt.<br>
-                L​​​‌​aoreet dolore magna aliquam erat volutpat.<br>
-          </td>
-          <tr>
-            <td style=" font-size: 10px;color:#666666">MONTH 20XX - PRESENT</td>
-          </tr>
-          <tr>
-            <td style=" font-size: 14px;color:#666666">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, <br> sed diam nonummy nibh.</td>
-          </tr>
-          <tr>
-            <td style=" font-size: 16px;"><b>Company</b>, Location — <i>Job Title</i></td>
-            <td rowspan="2" style=" font-size:14px;color:#666666;padding-left:30px">L​​​‌​aoreet dolore magna <br> aliquam erat volutpat.</td>
-          </tr>
-          <tr>
-            <td style=" font-size:10px;color:#666666">MONTH 20XX - MONTH 20XX</td>
-          </tr>
-          <tr>
-            <td style=" font-size:14px">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, <br> sed diam nonummy nibh.</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td style=" font-size: 16px; color:blue;padding-left:30px">AWARDS</td>
-          </tr>
-          <tr>
-            <td style=" font-size: 16px;"><b>Company</b>, Location — <i>Job Title</i></td>
-            <td rowspan="3" style=" font-size:14px;color:#666666;padding-left:30px">Lorem ipsum dolor sit amet.<br>
-                Consectetuer adipiscing elit.<br><br>
-                  Sed diam nonummy nibh euismod tincidunt.<br>
-                  L​​​‌​aoreet dolore magna aliquam erat volutpat.<br>
-            </td>
-            <tr>
-              <td style=" font-size:10px;color:#666666">MONTH 20XX - PRESENT</td>
-            </tr>
-            <tr>
-              <td style=" font-size:14px;color:#666666">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, <br> sed diam nonummy nibh.</td>
-            </tr>
-            <tr>
-              <td></td>
-              <td style=" font-size:14px;color:#666666;padding-left:30px">Nibh euismod tincidunt ut <br> laoreet dolore magna aliquam <br> erat volutpat.</td>
-            </tr>
-            <tr>
-              <td style=" font-size: 16px; color:blue">EDUCATION</td>
-            </tr>
-            <tr>
-              <td style=" font-size: 16px;"><b>School Name</b>, Location — <i>Degree</i></td>
-              <td style=" font-size:14px;color:#666666;padding-left:30px">Lorem ipsum dolor sit amet <br> Consectetuer adipiscing elit, </td>
-            </tr>
-            <tr>
-              <td style=" font-size:10px;color:#666666">MONTH 20XX - MONTH 20XX</td>
-              <td style=" font-size:14px;color:#666666;padding-left:30px">Sed diam nonummy</td>
-            </tr>
-            <tr>
-              <td style=" font-size:14px;color:#666666">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, <br>sed diam  nonummy nibh euismod tincidunt ut laoreet dolore.</td>
-              <td style=" font-size:14px;color:#666666;padding-left:30px">Nibh euismod tincidunt ut <br> laoreet dolore magna aliquam <br> erat volutpat.</td>
-            </tr>
-            <tr>
-              <td style=" font-size: 16px;"><b>School Name</b>, Location — <i>Degree</i></td>
-            </tr>
-            <tr>
-              <td style=" font-size:10px;color:#666666">MONTH 20XX - MONTH 20XX</td>
-              <td style=" font-size: 16px; color:blue;padding-left:30px">LANGUAGES</td>
-            </tr>
-            <tr>
-              <td style=" font-size:14px;color:#666666">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, <br> sed diam.</td>
-              <td style=" font-size:14px;color:#666666;padding-left:30px">Lorem ipsum dolor sit amet,<br> consectetuer adipiscing elit.</td>
-            </tr>
-            <tr>
-              <td></td>
-              <td style=" font-size:14px;color:#666666;padding-left:30px">Lorem ipsum, Dolor sit amet,<br> Consectetuer.</td>
-            </tr>
-            <tr>
-              <td style=" font-size: 16px; color:blue">PROJECTS</td>
-            </tr>
-            <tr>
-              <td><b>Project Name</b> — <i>Detail</i></td>
-            </tr>
-            <tr>
-
-            </tr>
+      <tr>
+        <td style=" font-size: 36px;"> <b>Ridham Sherathiya</b> </td>
+        <td style=" font-size: 14px;color:#666666;padding-left:30px">123 Your Street <br>
+          Your City, ST 12345 <br>
+          (123) 456-7890 <br>
+          no_reply@example.com <br></td>
+      </tr>
+      <tr>
+        <td style=" font-size: 14px;color:#666666; padding-bottom: 30px;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit</td>
+      </tr>
+      <tr>
+        <td style=" font-size: 16px; color:blue;">EXPERIENCE</td>
+        <td style=" font-size: 16px; color:blue;padding-left:30px">SKILLS</td>
+      </tr>
+      <tr>
+        <td style=" font-size: 16px;"><b>Company</b>, Location &#69707; <i>Job Title</i></td>
+        <td rowspan="3" style=" font-size: 14px;color:#666666;padding-left:30px">UI Designing.<br>
+          Front-End Developer.<br><br>
+          Prototype.<br>
+          L​​​‌​aoreet dolore magna aliquam erat volutpat.<br>
+        </td>
+      <tr>
+        <td style=" font-size: 10px;color:#666666">MONTH 20XX - PRESENT</td>
+      </tr>
+      <tr>
+        <td style=" font-size: 14px;color:#666666">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, <br> sed diam nonummy nibh.</td>
+      </tr>
+      <tr>
+        <td style=" font-size: 16px;"><b>Company</b>, Location  &#69707; <i>Job Title</i></td>
+        <td rowspan="2" style=" font-size:14px;color:#666666;padding-left:30px">L​​​‌​aoreet dolore magna <br> aliquam erat volutpat.</td>
+      </tr>
+      <tr>
+        <td style=" font-size:10px;color:#666666">MONTH 20XX - MONTH 20XX</td>
+      </tr>
+      <tr>
+        <td style=" font-size:14px">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, <br> sed diam nonummy nibh.</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td style=" font-size: 16px; color:blue;padding-left:30px">AWARDS</td>
+      </tr>
+      <tr>
+        <td style=" font-size: 16px;"><b>Company</b>, Location  &#69707; <i>Job Title</i></td>
+        <td rowspan="3" style=" font-size:14px;color:#666666;padding-left:30px">MU Fest VLab.<br>
+          Consectetuer adipiscing elit.<br><br>
+          Sed diam nonummy nibh euismod tincidunt.<br>
+          L​​​‌​aoreet dolore magna aliquam erat volutpat.<br>
+        </td>
+      <tr>
+        <td style=" font-size:10px;color:#666666">MONTH 20XX - PRESENT</td>
+      </tr>
+      <tr>
+        <td style=" font-size:14px;color:#666666">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, <br> sed diam nonummy nibh.</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td style=" font-size:14px;color:#666666;padding-left:30px">Nibh euismod tincidunt ut <br> laoreet dolore magna aliquam <br> erat volutpat.</td>
+      </tr>
+      <tr>
+        <td style=" font-size: 16px; color:blue">EDUCATION</td>
+      </tr>
+      <tr>
+        <td style=" font-size: 16px;"><b>Ekalavya Public School</b>, Junagadh  &#69707; <i>1 to 10 std</i></td>
+        <td style=" font-size:14px;color:#666666;padding-left:30px">Lorem ipsum dolor sit amet. <br> Consectetuer adipiscing elit, </td>
+      </tr>
+      <tr>
+        <td style=" font-size:10px;color:#666666">MONTH 2003 - MONTH 2013</td>
+        <td style=" font-size:14px;color:#666666;padding-left:30px">Sed diam nonummy</td>
+      </tr>
+      <tr>
+        <td style=" font-size:14px;color:#666666">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, <br>sed diam nonummy nibh euismod tincidunt ut laoreet dolore.</td>
+        <td style=" font-size:14px;color:#666666;padding-left:30px">Nibh euismod tincidunt ut <br> laoreet dolore magna aliquam <br> erat volutpat.</td>
+      </tr>
+      <tr>
+        <td style=" font-size: 16px;"><b>School Name</b>, Location  &#69707; <i>Degree</i></td>
+      </tr>
+      <tr>
+        <td style=" font-size:10px;color:#666666">MONTH 20XX - MONTH 20XX</td>
+        <td style=" font-size: 16px; color:blue;padding-left:30px">LANGUAGES</td>
+      </tr>
+      <tr>
+        <td style=" font-size:14px;color:#666666">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, <br> sed diam.</td>
+        <td style=" font-size:14px;color:#666666;padding-left:30px">English,<br> Hindi,<br> Gujarati.</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td style=" font-size:14px;color:#666666;padding-left:30px">Lorem ipsum, Dolor sit amet,<br> Consectetuer.</td>
+      </tr>
+      <tr>
+        <td style=" font-size: 16px; color:blue">PROJECTS</td>
+      </tr>
+      <tr>
+        <td style=" font-size: 16px;"><b>Project Name</b>  &#69707; <i>Detail</i></td>
+      </tr>
+      <tr>
+        <td style=" font-size:14px;color:#666666">Vitual Food - Online Food delivery</td>
+      </tr>
+      <tr>
+      </tr>
     </table>
-
-        </div>
 </body>
+
 </html>
